--- a/JSON_Mini_Project.ipynb
+++ b/JSON_Mini_Project.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load JSON data into Python as pandas dataframe."
+    "#Load JSON data into Python as pandas dataframe."
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Check datatype of the imported JSON file"
+    "#Check datatype of the imported JSON file"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "View first few rows of dataframe."
+    "#View first few rows of dataframe."
    ]
   },
   {
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look at shape of dataset"
+    "#Look at shape of dataset"
    ]
   },
   {
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "View column names."
+    "#View column names."
    ]
   },
   {
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Find the number of projects in each country."
+    "#Find the number of projects in each country."
    ]
   },
   {
@@ -399,7 +399,7 @@
    "metadata": {},
    "source": [
     "****\n",
-    "#### List the ten countries with the most projects (answer to question #1)."
+    "#### Question 1: List the ten countries with the most projects."
    ]
   },
   {
@@ -444,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Loading JSON file as a string, then using normalization to create a table from nested element (mjtheme_namecode)."
+    "#Loading JSON file as a string, then using normalization to create a table from nested element (mjtheme_namecode)."
    ]
   },
   {
@@ -473,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Viewing the data"
+    "#Viewing the data"
    ]
   },
   {
@@ -581,14 +581,14 @@
     }
    ],
    "source": [
-    "project_themes.head(10)\n"
+    "project_themes.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Group the data in project_themes series by name, then sort to get top major project themes."
+    "#Group the data in project_themes series by name, then sort to get top major project themes."
    ]
   },
   {
@@ -666,13 +666,6 @@
     "top_10_themes = project_names.sort_values(ascending=False).head(10)\n",
     "top_10_themes"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -755,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For key:value pairs in each item of the dictionary(d), let the element in project_themes dataframe 'code' column be the key and the 'name' column be the value. This will fill in all missing project 'name' values based on the 'code'."
+    "#For key:value pairs in each item of the dictionary(d), let the element in project_themes dataframe 'code' column be the key and the 'name' column be the value. This will fill in all missing project 'name' values based on the 'code'."
    ]
   },
   {
@@ -772,7 +765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Group the data in project_names_no_missing series by name, then sort to get top major project themes."
+    "#Group the data in project_names_no_missing series by name, then sort to get top major project themes."
    ]
   },
   {
