Updated JSON Mini Project

--- a/JSON_Mini_Project.ipynb
+++ b/JSON_Mini_Project.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Load JSON data into Python as pandas dataframe."
+    "##### Load JSON data into Python as pandas dataframe."
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "#Check datatype of the imported JSON file"
+    "Check datatype of the imported JSON file"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#View first few rows of dataframe."
+    "##### View first few rows of dataframe."
    ]
   },
   {
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Look at shape of dataset"
+    "##### Look at shape of dataset"
    ]
   },
   {
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#View column names."
+    "##### View column names."
    ]
   },
   {
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Find the number of projects in each country."
+    "##### Find the number of projects in each country."
    ]
   },
   {
@@ -444,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Loading JSON file as a string, then using normalization to create a table from nested element (mjtheme_namecode)."
+    "##### Loading JSON file as a string, then using normalization to create a table from nested element (mjtheme_namecode)."
    ]
   },
   {
@@ -473,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Viewing the data"
+    "##### Viewing the data"
    ]
   },
   {
@@ -588,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Group the data in project_themes series by name, then sort to get top major project themes."
+    "##### Group the data in project_themes series by name, then sort to get top major project themes."
    ]
   },
   {
@@ -748,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#For key:value pairs in each item of the dictionary(d), let the element in project_themes dataframe 'code' column be the key and the 'name' column be the value. This will fill in all missing project 'name' values based on the 'code'."
+    "##### For key:value pairs in each item of the dictionary(d), let the element in project_themes dataframe 'code' column be the key and the 'name' column be the value. This will fill in all missing project 'name' values based on the 'code'."
    ]
   },
   {
@@ -765,7 +765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Group the data in project_names_no_missing series by name, then sort to get top major project themes."
+    "##### Group the data in project_names_no_missing series by name, then sort to get top project themes."
    ]
   },
   {
@@ -782,6 +782,13 @@
    "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 World Bank Project Themes (in order of popularity): \n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -806,8 +813,16 @@
    ],
    "source": [
     "top_10_themes = project_names_no_missing.sort_values(ascending=False).head(10)\n",
+    "print('Top 10 World Bank Project Themes (in order of popularity): ')\n",
     "top_10_themes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
