--- a/inferential_statistics_1b-Q6.25.ipynb
+++ b/inferential_statistics_1b-Q6.25.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "(1338, 8)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "4   32    1  28.880         0       0       1   3866.85520               1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -320,12 +320,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I would calculate the probability of the mean charge being 12000 or higher, by calculating the area under the pdf for the value 12000 and above. If the probability of the mean is >95%, that would support the conclusion (based on the sample) that the actual average charge has not fallen below 12000."
+    "I would calculate the probability of the mean charge being 12000 or more, by calculating the area under the probability density function for the value 12000 and more. If the probability of the mean being 12000 or more is 95% (or less), that would support the conclusion (based on the sample) that the actual average charge has NOT fallen below 12000."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -351,74 +374,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       16884.92400\n",
-       "1        1725.55230\n",
-       "2        4449.46200\n",
-       "3       21984.47061\n",
-       "4        3866.85520\n",
-       "           ...     \n",
-       "1333    10600.54830\n",
-       "1334     2205.98080\n",
-       "1335     1629.83350\n",
-       "1336     2007.94500\n",
-       "1337    29141.36030\n",
-       "Name: charges, Length: 1338, dtype: float64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "medical.charges"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#calculating critical value: \n",
-    "#alpha = 1-.95 = 0.05\n",
-    "#critical probability = 1 - alpha/2 = 1- 0.025 = 0.975\n",
-    "#degrees of freedom = 1338 - 1 = 1337\n",
-    "mean = 13270\n",
-    "n=1338\n",
-    "goalmean=12000\n",
-    "sd = 12105\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.84\n"
+      "With 95% confidence, the average charge over the entire population should be above $ 12672.86\n"
      ]
     }
    ],
    "source": [
-    "zscore=(mean-goalmean)/(sd/np.sqrt(n))\n",
-    "print(zscore.round(2))"
+    "#calculating critical value: \n",
+    "#alpha = 1-.95 = 0.05\n",
+    "#critical probability = 1 - alpha/2 = 1- 0.025 = 0.975\n",
+    "#degrees of freedom = 1338 - 1 = 1337\n",
+    "#1-tailed t score based on alpha of 0.05 and dof of 1337\n",
+    "tscore = 1.646\n",
+    "mean = 13270\n",
+    "sd = 12105\n",
+    "n=1338\n",
+    "dof=1337\n",
+    "alpha = 0.025\n",
+    "ci95 = tscore * (mean/np.sqrt(n))\n",
+    "lowerci95 = mean-ci95\n",
+    "print('With 95% confidence, the average charge over the entire population should be above $', lowerci95.round(2))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A zscore of 3.84 indicates that the probability of a mean medical charge being $12000 or higher is only 0.01%, based on the data from this sample. Therefore, the administrator should be concerned if that is his target mean."
+    "#### Therefore, the administrator should not be very concerned that the average charge has fallen below $12000."
    ]
   },
   {
@@ -508,20 +496,6 @@
     "tscore = (mean0-mean1)/sd_pooled\n",
     "print('The t-test statistic is ', tscore)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
