--- a/inferential_statistics_1b-Q6.25.ipynb
+++ b/inferential_statistics_1b-Q6.25.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data is not normally distributed, and the histogram is right-skewed. The mean can still be a useful calculation here (but  not as useful as median would be at describing the data). The standard deviation is not helpful in describing the variability of the data distribution here."
+    "The sample data is not normally distributed, and the histogram is right-skewed. The mean can still be a useful calculation here (but  not as useful as median would be at describing the data). The standard deviation is not helpful in describing the variability of the data distribution in this sample."
    ]
   },
   {
@@ -324,34 +324,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -369,19 +341,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A one sided confidence interval is appropriate here, to assure that the average charge is >=12000. \n"
+    "A one sided confidence interval is appropriate here, to assure that, with 95% confidence,the average charge is >=12000. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "With 95% confidence, the average charge over the entire population should be above $ 12672.86\n"
+      "With 95% confidence, the average charge over the entire population should be above $ 12620.71\n"
      ]
     }
    ],
@@ -390,14 +362,13 @@
     "#alpha = 1-.95 = 0.05\n",
     "#critical probability = 1 - alpha/2 = 1- 0.025 = 0.975\n",
     "#degrees of freedom = 1338 - 1 = 1337\n",
-    "#1-tailed t score based on alpha of 0.05 and dof of 1337\n",
-    "tscore = 1.646\n",
+    "#1-tailed t value based on critical t value of 0.975 and dof of 1337 = 1.962\n",
+    "tvalue = 1.962\n",
     "mean = 13270\n",
     "sd = 12105\n",
     "n=1338\n",
-    "dof=1337\n",
-    "alpha = 0.025\n",
-    "ci95 = tscore * (mean/np.sqrt(n))\n",
+    "stderror= sd/np.sqrt(n)\n",
+    "ci95 = tvalue*stderror\n",
     "lowerci95 = mean-ci95\n",
     "print('With 95% confidence, the average charge over the entire population should be above $', lowerci95.round(2))\n"
    ]
@@ -406,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Therefore, the administrator should not be very concerned that the average charge has fallen below $12000."
+    "#### Therefore, the administrator should NOT be concerned that the average charge has fallen below $12000."
    ]
   },
   {
@@ -441,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -464,45 +435,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n0 = 555\n",
-    "n1= 783\n",
-    "mean0 = group0.charges.mean()\n",
-    "mean1 = group1.charges.mean()\n",
-    "sd0 = group0.charges.std()\n",
-    "sd1 = group1.charges.std()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The pooled standard deviation is:  11520.034268775256\n",
-      "The t-test statistic is  -0.6599378271675596\n"
+      "8821.421892306294 16423.928276537663\n"
      ]
     }
    ],
    "source": [
-    "sd_pooled = np.sqrt((((n0-1)*(sd0**2))+((n1-1)*(sd1**2)))/(n0+n1-2))\n",
-    "print('The pooled standard deviation is: ', sd_pooled)\n",
-    "tscore = (mean0-mean1)/sd_pooled\n",
-    "print('The t-test statistic is ', tscore)"
+    "n0 = 555\n",
+    "n1= 783\n",
+    "mean0 = group0.charges.mean()\n",
+    "mean1 = group1.charges.mean()\n",
+    "sd0 = group0.charges.std()\n",
+    "sd1 = group1.charges.std()\n",
+    "print(mean0, mean1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11520.034268775256\n",
+      "The pooled standard deviation is:  11520.034268775256\n",
+      "The t-test statistic is  11.89329903087671\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=(n0-1)*(sd0**2)\n",
+    "b=(n1-1)*(sd1**2)\n",
+    "c=a+b\n",
+    "sdp=np.sqrt(c/(n0+n1-2))\n",
+    "print(sdp)\n",
+    "sd_pooled = np.sqrt((((n0-1)*(sd0**2))+((n1-1)*(sd1**2)))/(n0+n1-2))\n",
+    "print('The pooled standard deviation is: ', sd_pooled)\n",
+    "tscore = (mean1-mean0)/(sd_pooled*np.sqrt(1/n0 + 1/n1))\n",
+    "print('The t-test statistic is ', tscore)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -520,30 +499,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_indResult(statistic=-11.893299030876712, pvalue=4.461230231620717e-31)"
+       "Ttest_indResult(statistic=11.893299030876712, pvalue=4.461230231620717e-31)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scipy.stats.ttest_ind(group0['charges'], group1['charges'])"
+    "scipy.stats.ttest_ind(group1['charges'], group0['charges'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
