--- a/inferential_statistics_1b-Q6.25.ipynb
+++ b/inferential_statistics_1b-Q6.25.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "(1338, 8)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "4   32    1  28.880         0       0       1   3866.85520               1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -320,7 +320,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I would calculate the probability of the mean charge being 12000 or more, by calculating the area under the probability density function for the value 12000 and more. If the probability of the mean being 12000 or more is 95% (or less), that would support the conclusion (based on the sample) that the actual average charge has NOT fallen below 12000."
+    "Assuming that these data represent a random sample of charges, we can justify that these data allow us to answer the question based on the large sample size (n=1338). \n",
+    "\n",
+    "Calculating the confidence interval of the mean, and checking if the lower range is at or above $12000, would be the most appropriate frequentist test. "
    ]
   },
   {
@@ -346,14 +348,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "With 95% confidence, the average charge over the entire population should be above $ 12620.71\n"
+      "1.961739888600845\n",
+      "With 95% confidence, the average charge over the entire population should be above $ 12621.0\n"
      ]
     }
    ],
@@ -363,14 +366,16 @@
     "#critical probability = 1 - alpha/2 = 1- 0.025 = 0.975\n",
     "#degrees of freedom = 1338 - 1 = 1337\n",
     "#1-tailed t value based on critical t value of 0.975 and dof of 1337 = 1.962\n",
+    "t_crit = t.ppf(.975, 1337)\n",
+    "print(t_crit)\n",
     "tvalue = 1.962\n",
     "mean = 13270\n",
     "sd = 12105\n",
     "n=1338\n",
     "stderror= sd/np.sqrt(n)\n",
-    "ci95 = tvalue*stderror\n",
+    "ci95 = t_crit*stderror\n",
     "lowerci95 = mean-ci95\n",
-    "print('With 95% confidence, the average charge over the entire population should be above $', lowerci95.round(2))\n"
+    "print('With 95% confidence, the average charge over the entire population should be above $', lowerci95.round())\n"
    ]
   },
   {
@@ -407,12 +412,12 @@
     "__A:__\n",
     "#### Null hypothesis: People with insurance are charged the same amount as people without insurance.\n",
     "#### Alternative hypothesis: People with insurance are charged a different amount compared with people without insurance.\n",
-    "#### We are assuming that the variance of the datasets are similar."
+    "#### We are assuming that the variance of the two groups are equal."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -427,60 +432,66 @@
    "source": [
     "#group1 = with insurance\n",
     "#group0 = without insurance\n",
-    "group1 = medical[medical.insuranceclaim == 1]\n",
-    "group0 = medical[medical.insuranceclaim == 0]\n",
-    "print(group1.shape)\n",
-    "print(group0.shape)"
+    "insurance = medical[medical.insuranceclaim == 1]\n",
+    "no_insurance = medical[medical.insuranceclaim == 0]\n",
+    "print(insurance.shape)\n",
+    "print(no_insurance.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8821.421892306294 16423.928276537663\n"
+      "Insurance: mean:  16423.928276537663 , standard deviation:  14045.928418802127\n",
+      "No insurance: mean:  8821.421892306294 , standard deviation:  6446.510126811736\n"
      ]
     }
    ],
    "source": [
-    "n0 = 555\n",
-    "n1= 783\n",
-    "mean0 = group0.charges.mean()\n",
-    "mean1 = group1.charges.mean()\n",
-    "sd0 = group0.charges.std()\n",
-    "sd1 = group1.charges.std()\n",
-    "print(mean0, mean1)"
+    "n_insurance = 783\n",
+    "n_no_insurance= 555\n",
+    "mean_insurance = insurance.charges.mean()\n",
+    "mean_no_insurance = no_insurance.charges.mean()\n",
+    "sd_insurance = insurance.charges.std()\n",
+    "sd_no_insurance = no_insurance.charges.std()\n",
+    "print('Insurance: mean: ', mean_insurance, ', standard deviation: ', sd_insurance)\n",
+    "print('No insurance: mean: ', mean_no_insurance,', standard deviation: ', sd_no_insurance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11520.034268775256\n",
       "The pooled standard deviation is:  11520.034268775256\n",
-      "The t-test statistic is  11.89329903087671\n"
+      "The t-test statistic is  11.89329903087671\n",
+      "The pvalue is  4.8312994722750845e-30\n"
      ]
     }
    ],
    "source": [
-    "a=(n0-1)*(sd0**2)\n",
-    "b=(n1-1)*(sd1**2)\n",
+    "a=(n_insurance-1)*(sd_insurance**2)\n",
+    "b=(n_no_insurance-1)*(sd_no_insurance**2)\n",
     "c=a+b\n",
-    "sdp=np.sqrt(c/(n0+n1-2))\n",
-    "print(sdp)\n",
-    "sd_pooled = np.sqrt((((n0-1)*(sd0**2))+((n1-1)*(sd1**2)))/(n0+n1-2))\n",
-    "print('The pooled standard deviation is: ', sd_pooled)\n",
-    "tscore = (mean1-mean0)/(sd_pooled*np.sqrt(1/n0 + 1/n1))\n",
-    "print('The t-test statistic is ', tscore)"
+    "df=n_insurance+n_no_insurance - 2\n",
+    "sdp=np.sqrt(c/(n_insurance+n_no_insurance-2))\n",
+    "print('The pooled standard deviation is: ', sdp)\n",
+    "t_value = (mean_insurance-mean_no_insurance)/(sdp*np.sqrt(1/n_insurance + 1/n_no_insurance))\n",
+    "print('The t-test statistic is ', t_value)\n",
+    "#P-value is probability of null hypothesis NOT being correct (that is, the likelihood that people with insurance have significantly different mean medical charge vs those without insurance)\n",
+    "# for a 2-tailed t test, P()\n",
+    "pdf = t.pdf(t_value,df=df)\n",
+    "p = pdf*2\n",
+    "print('The pvalue is ', p)"
    ]
   },
   {
@@ -499,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -508,13 +519,13 @@
        "Ttest_indResult(statistic=11.893299030876712, pvalue=4.461230231620717e-31)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scipy.stats.ttest_ind(group1['charges'], group0['charges'])"
+    "scipy.stats.ttest_ind(insurance['charges'], no_insurance['charges'])"
    ]
   },
   {
@@ -540,22 +551,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_indResult(statistic=-13.298031957975649, pvalue=1.1105103216309125e-37)"
+       "Ttest_indResult(statistic=13.298031957975649, pvalue=1.1105103216309125e-37)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scipy.stats.ttest_ind(group0['charges'], group1['charges'], equal_var=False)"
+    "scipy.stats.ttest_ind(insurance['charges'], no_insurance['charges'], equal_var=False)"
    ]
   },
   {
@@ -571,290 +582,18 @@
    "source": [
     "__A:__\n",
     "\n",
-    "Yes, there is a function, scipy.stats.zscore()\n",
-    "\n"
+    "scipy.stats has a zscore method. It calculates the zscore of each value in the sample relative to the sample mean and standard deviation.\n",
+    "\n",
+    "scipy.stats.zscore(a, axis=0, ddof=0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PearsonRConstantInputWarning',\n",
-       " 'PearsonRNearConstantInputWarning',\n",
-       " '__all__',\n",
-       " '__builtins__',\n",
-       " '__cached__',\n",
-       " '__doc__',\n",
-       " '__file__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__path__',\n",
-       " '__spec__',\n",
-       " '_binned_statistic',\n",
-       " '_constants',\n",
-       " '_continuous_distns',\n",
-       " '_discrete_distns',\n",
-       " '_distn_infrastructure',\n",
-       " '_distr_params',\n",
-       " '_hypotests',\n",
-       " '_multivariate',\n",
-       " '_rvs_sampling',\n",
-       " '_stats',\n",
-       " '_stats_mstats_common',\n",
-       " '_tukeylambda_stats',\n",
-       " 'absolute_import',\n",
-       " 'alpha',\n",
-       " 'anderson',\n",
-       " 'anderson_ksamp',\n",
-       " 'anglit',\n",
-       " 'ansari',\n",
-       " 'arcsine',\n",
-       " 'argus',\n",
-       " 'bartlett',\n",
-       " 'bayes_mvs',\n",
-       " 'bernoulli',\n",
-       " 'beta',\n",
-       " 'betaprime',\n",
-       " 'binned_statistic',\n",
-       " 'binned_statistic_2d',\n",
-       " 'binned_statistic_dd',\n",
-       " 'binom',\n",
-       " 'binom_test',\n",
-       " 'boltzmann',\n",
-       " 'boxcox',\n",
-       " 'boxcox_llf',\n",
-       " 'boxcox_normmax',\n",
-       " 'boxcox_normplot',\n",
-       " 'bradford',\n",
-       " 'brunnermunzel',\n",
-       " 'burr',\n",
-       " 'burr12',\n",
-       " 'cauchy',\n",
-       " 'chi',\n",
-       " 'chi2',\n",
-       " 'chi2_contingency',\n",
-       " 'chisquare',\n",
-       " 'circmean',\n",
-       " 'circstd',\n",
-       " 'circvar',\n",
-       " 'combine_pvalues',\n",
-       " 'contingency',\n",
-       " 'cosine',\n",
-       " 'crystalball',\n",
-       " 'cumfreq',\n",
-       " 'describe',\n",
-       " 'dgamma',\n",
-       " 'dirichlet',\n",
-       " 'distributions',\n",
-       " 'division',\n",
-       " 'dlaplace',\n",
-       " 'dweibull',\n",
-       " 'energy_distance',\n",
-       " 'entropy',\n",
-       " 'epps_singleton_2samp',\n",
-       " 'erlang',\n",
-       " 'expon',\n",
-       " 'exponnorm',\n",
-       " 'exponpow',\n",
-       " 'exponweib',\n",
-       " 'f',\n",
-       " 'f_oneway',\n",
-       " 'fatiguelife',\n",
-       " 'find_repeats',\n",
-       " 'fisher_exact',\n",
-       " 'fisk',\n",
-       " 'fligner',\n",
-       " 'foldcauchy',\n",
-       " 'foldnorm',\n",
-       " 'frechet_l',\n",
-       " 'frechet_r',\n",
-       " 'friedmanchisquare',\n",
-       " 'gamma',\n",
-       " 'gausshyper',\n",
-       " 'gaussian_kde',\n",
-       " 'genexpon',\n",
-       " 'genextreme',\n",
-       " 'gengamma',\n",
-       " 'genhalflogistic',\n",
-       " 'genlogistic',\n",
-       " 'gennorm',\n",
-       " 'genpareto',\n",
-       " 'geom',\n",
-       " 'gilbrat',\n",
-       " 'gmean',\n",
-       " 'gompertz',\n",
-       " 'gstd',\n",
-       " 'gumbel_l',\n",
-       " 'gumbel_r',\n",
-       " 'halfcauchy',\n",
-       " 'halfgennorm',\n",
-       " 'halflogistic',\n",
-       " 'halfnorm',\n",
-       " 'hmean',\n",
-       " 'hypergeom',\n",
-       " 'hypsecant',\n",
-       " 'invgamma',\n",
-       " 'invgauss',\n",
-       " 'invweibull',\n",
-       " 'invwishart',\n",
-       " 'iqr',\n",
-       " 'itemfreq',\n",
-       " 'jarque_bera',\n",
-       " 'johnsonsb',\n",
-       " 'johnsonsu',\n",
-       " 'kappa3',\n",
-       " 'kappa4',\n",
-       " 'kde',\n",
-       " 'kendalltau',\n",
-       " 'kruskal',\n",
-       " 'ks_2samp',\n",
-       " 'ksone',\n",
-       " 'kstat',\n",
-       " 'kstatvar',\n",
-       " 'kstest',\n",
-       " 'kstwobign',\n",
-       " 'kurtosis',\n",
-       " 'kurtosistest',\n",
-       " 'laplace',\n",
-       " 'levene',\n",
-       " 'levy',\n",
-       " 'levy_l',\n",
-       " 'levy_stable',\n",
-       " 'linregress',\n",
-       " 'loggamma',\n",
-       " 'logistic',\n",
-       " 'loglaplace',\n",
-       " 'lognorm',\n",
-       " 'logser',\n",
-       " 'lomax',\n",
-       " 'mannwhitneyu',\n",
-       " 'matrix_normal',\n",
-       " 'maxwell',\n",
-       " 'median_absolute_deviation',\n",
-       " 'median_test',\n",
-       " 'mielke',\n",
-       " 'mode',\n",
-       " 'moment',\n",
-       " 'mood',\n",
-       " 'morestats',\n",
-       " 'moyal',\n",
-       " 'mstats',\n",
-       " 'mstats_basic',\n",
-       " 'mstats_extras',\n",
-       " 'multinomial',\n",
-       " 'multivariate_normal',\n",
-       " 'mvn',\n",
-       " 'mvsdist',\n",
-       " 'nakagami',\n",
-       " 'nbinom',\n",
-       " 'ncf',\n",
-       " 'nct',\n",
-       " 'ncx2',\n",
-       " 'norm',\n",
-       " 'normaltest',\n",
-       " 'norminvgauss',\n",
-       " 'obrientransform',\n",
-       " 'ortho_group',\n",
-       " 'pareto',\n",
-       " 'pearson3',\n",
-       " 'pearsonr',\n",
-       " 'percentileofscore',\n",
-       " 'planck',\n",
-       " 'pointbiserialr',\n",
-       " 'poisson',\n",
-       " 'power_divergence',\n",
-       " 'powerlaw',\n",
-       " 'powerlognorm',\n",
-       " 'powernorm',\n",
-       " 'ppcc_max',\n",
-       " 'ppcc_plot',\n",
-       " 'print_function',\n",
-       " 'probplot',\n",
-       " 'randint',\n",
-       " 'random_correlation',\n",
-       " 'rankdata',\n",
-       " 'ranksums',\n",
-       " 'rayleigh',\n",
-       " 'rdist',\n",
-       " 'recipinvgauss',\n",
-       " 'reciprocal',\n",
-       " 'relfreq',\n",
-       " 'rice',\n",
-       " 'rv_continuous',\n",
-       " 'rv_discrete',\n",
-       " 'rv_histogram',\n",
-       " 'rvs_ratio_uniforms',\n",
-       " 'scoreatpercentile',\n",
-       " 'sem',\n",
-       " 'semicircular',\n",
-       " 'shapiro',\n",
-       " 'siegelslopes',\n",
-       " 'sigmaclip',\n",
-       " 'skellam',\n",
-       " 'skew',\n",
-       " 'skewnorm',\n",
-       " 'skewtest',\n",
-       " 'spearmanr',\n",
-       " 'special_ortho_group',\n",
-       " 'statlib',\n",
-       " 'stats',\n",
-       " 't',\n",
-       " 'test',\n",
-       " 'theilslopes',\n",
-       " 'tiecorrect',\n",
-       " 'tmax',\n",
-       " 'tmean',\n",
-       " 'tmin',\n",
-       " 'trapz',\n",
-       " 'triang',\n",
-       " 'trim1',\n",
-       " 'trim_mean',\n",
-       " 'trimboth',\n",
-       " 'truncexpon',\n",
-       " 'truncnorm',\n",
-       " 'tsem',\n",
-       " 'tstd',\n",
-       " 'ttest_1samp',\n",
-       " 'ttest_ind',\n",
-       " 'ttest_ind_from_stats',\n",
-       " 'ttest_rel',\n",
-       " 'tukeylambda',\n",
-       " 'tvar',\n",
-       " 'uniform',\n",
-       " 'unitary_group',\n",
-       " 'variation',\n",
-       " 'vonmises',\n",
-       " 'vonmises_line',\n",
-       " 'wald',\n",
-       " 'wasserstein_distance',\n",
-       " 'weibull_max',\n",
-       " 'weibull_min',\n",
-       " 'weightedtau',\n",
-       " 'wilcoxon',\n",
-       " 'wishart',\n",
-       " 'wrapcauchy',\n",
-       " 'yeojohnson',\n",
-       " 'yeojohnson_llf',\n",
-       " 'yeojohnson_normmax',\n",
-       " 'yeojohnson_normplot',\n",
-       " 'yulesimon',\n",
-       " 'zipf',\n",
-       " 'zmap',\n",
-       " 'zscore']"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dir(scipy.stats)"
+    "scipy.stats.zscore?"
    ]
   },
   {
@@ -874,6 +613,13 @@
     "* forming a hypothesis and framing the null and alternative hypotheses\n",
     "* testing this using a _t_-test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
