--- a/homework/Mini_Project_Naive_Bayes.ipynb
+++ b/homework/Mini_Project_Naive_Bayes.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The histogram shows the average rating (on a scale from 0 to 1) that each of the critics rated movies. The shape of the distribution is nonsymmetric bimodal. The first distribution (>0.3 and<0.6) has left skew (negative skew), whereast the second distribution ( If the bins had been allocated differently (i.e., data divided into fewer bins, since the sample size is not very large), the distribution would have been approaching more of a unimodal, right-skewed distribution. The critics who submitted ratings least often had lowest/highest average scores,most likely because they only rated one or 2 movies as very good or very bad."
+    "The histogram shows the average rating (on a scale from 0 to 1) that each of the critics rated movies. The shape of the distribution is nonsymmetric bimodal. The first distribution (>0.3 and<0.6) has left skew (negative skew), whereas the second distribution (0.6 to 0.8) has right (positive) skew. If the bins had been allocated differently (i.e., data divided into fewer bins, since the sample size is not very large, the distribution would have been approaching more of a unimodal, right-skewed distribution. The critics who submitted ratings least often had lowest/highest average scores,most likely because they only rated one or 2 movies as very good or very bad."
    ]
   },
   {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -551,9 +551,9 @@
      "output_type": "stream",
      "text": [
       "Test set predictions:\n",
-      "[1 1 0 ... 1 0 1]\n",
-      "Accuracy score of training set:  0.922\n",
-      "Accuracy score of test set:  0.784\n"
+      "[1 0 1 ... 1 1 1]\n",
+      "Accuracy score of training set:  0.921\n",
+      "Accuracy score of test set:  0.773\n"
      ]
     }
    ],
@@ -565,13 +565,13 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
     "\n",
     "\n",
-    "mnb = MultinomialNB()\n",
-    "mnb.fit(X_train, y_train)\n",
-    "y_pred = mnb.predict(X_test)\n",
+    "clf = MultinomialNB()\n",
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_test)\n",
     "print(\"Test set predictions:\\n{}\".format(y_pred))\n",
     "\n",
-    "accuracy_train = mnb.score(X_train, y_train)      \n",
-    "accuracy_test = mnb.score(X_test, y_test)\n",
+    "accuracy_train = clf.score(X_train, y_train)      \n",
+    "accuracy_test = clf.score(X_test, y_test)\n",
     "\n",
     "print('Accuracy score of training set: ', round(accuracy_train,3))\n",
     "print('Accuracy score of test set: ', round(accuracy_test, 3))"
@@ -581,8 +581,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observations:\n",
-    "The classifier fit very well to the training data, but did not fit as well to the test data. This is a sign that the classifier was overfit to the training data. Most likely it could benefit from hyperparameter tuning. However, for a simple out-of-the-box classifier, overall it fit fairly well."
+    "#### Observations:\n",
+    "The classifier fit very well to the training data, but did not fit as well to the test data. This is a sign that the classifier was overfit to the training data. Most likely it could benefit from hyperparameter tuning. However, for a simple 'out-of-the-box' classifier, overall it fit pretty well."
    ]
   },
   {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -639,19 +639,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "xi.head()\n",
     "xi['sum']= xi.iloc[:, 0:22417].sum(axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,15 +748,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "_, itest = train_test_split(range(critics.shape[0]), train_size=0.7)\n",
     "mask = np.zeros(critics.shape[0], dtype=np.bool)\n",
-    "mask[itest] = True"
+    "mask[itest] = False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset size: 15561\n",
+      "Mask size: 4669\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Dataset size: {critics.shape[0]}')\n",
+    "print(f'Mask size: {len(itest)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -780,7 +805,7 @@
    "source": [
     "We are trying to create a model with parameters under which the observed data is most likely/probable and best described.  We use log likelihood because the math is less complicated compared with a pure likelihood estimate.\n",
     "\n",
-    "If we chose a value of alpha that is too high, the log likelihood would most likely lead to underfitting of the data, since terms that didn't exist in the training data would be lost.\n",
+    "If we chose a value of alpha that is too high, the log likelihood could lead to underfitting of the data, since terms that didn't exist in the data could be weighted too heavily.\n",
     "\n"
    ]
   },
@@ -794,8 +819,8 @@
     "\n",
     "#the grid of parameters to search over\n",
     "alphas = [.1, 1, 5, 10, 50]\n",
-    "min_dfs = [1e-5, 1e-4, 1e-3, 1e-2, 1e-1]\n",
-    "#best_min_df = 1 # YOUR TURN: put your value of min_df here.\n",
+    "best_min_df = 1 \n",
+    "# YOUR TURN: put your value of min_df here.\n",
     "\n",
     "#Find the best value for alpha and min_df, and the best classifier\n",
     "best_alpha = None\n",
